<?xml version="1.0"?>
<package format="2">
  <name>libopen3d-dev</name>
  <version>0.19.0</version>
  <description>Downloads and installs Open3d </description>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>libglfw3-dev</build_depend>
  <build_depend>opengl</build_depend>
  <exec_depend>opengl</exec_depend>

  <depend>libc++-dev</depend>
  <depend>assimp-dev</depend>
  <depend>libblas-dev</depend>
  <depend>eigen</depend>
  <depend>embree</depend>
  <depend>fmt</depend>
  <depend>libjpeg</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>liblapack-dev</depend>
  <depend>liblzf-dev</depend>
  <depend>liblzf-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
