<?xml version="1.0"?>
<package format="2">
  <name>tesseract_open3d</name>
  <version>0.1.0</version>
  <description>Tesseract Open3d Tools</description>
  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>yaml-cpp</depend>
  <depend>tesseract_common</depend>
  <depend>libopen3d-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>lcov</test_depend>
  <test_depend>libclang-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
